--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }
+tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
 serde = { version = "1.0.188", features = ["derive"] }
 bincode = "1.3.3"
 ring = "0.16.20"
